# rust-jobs

./: Cargo.toml  Design.md  README.md
worker/: Cargo.toml
worker-api/: Cargo.toml  Rocket.toml.off
worker-api/src/: api.rs  main.rs  security.rs
worker-api/src/api/: auth.rs  health.rs  jobs.rs  request.rs  response.rs
worker-api/src/api/request/: job.rs
worker-api/src/api/response/: job_status.rs
worker-api/src/security/: claims.rs  control.rs  token.rs  user.rs
worker-cli/: Cargo.toml
worker-cli/src/: client.rs  main.rs
worker-cli/src/client/: error.rs  request.rs  response.rs  worker_client.rs
worker-cli/src/client/request/: login.rs  new_job.rs
worker-cli/src/client/response/: login.rs  status.rs
worker/examples/: run_jobs.rs
worker/src/: job.rs  job_error.rs  job_status.rs  lib.rs
