[package]
name = "worker-api"
version = "0.1.0"
authors = ["Jorge D. Ortiz Fuentes <jdortiz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", version = "0.5.0-dev", features = ["tls"] }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", version = "0.5.0-dev", default-features = false, features = ["json", "uuid"]}
jsonwebtoken = "7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"]}
worker = { path = "../worker" }
