[package]
name = "worker-cli"
version = "0.1.0"
authors = ["Jorge D. Ortiz Fuentes <jdortiz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
uuid = { version = "0.8", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
