[package]
name = "worker"
version = "0.1.0"
authors = ["Jorge D. Ortiz Fuentes <jdortiz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }
